--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Agricultural Advisory System</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-<!-- Leaflet CSS & JS -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  integrity="sha256-sA+4h2f2kGk3s8wH3qk4Xg8b8f0m1fD6v+qg1gGkP3s=" crossorigin=""/>
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-  integrity="sha256-Vj7m2vYbJjA7K8r6R6q3s1kH8y4y9u2qv3q1kGm8G1o=" crossorigin=""></script>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <style>
 :root{ --red:#e74c3c; --green:#2e8b57; --green-dark:#246b45;}
