--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ canvas{ margin-top:20px; width:100% !important; height:400px !important; }
 /* FRAME ya ramani */
 #mapContainer {
   position: relative;
-  width: 100%;
+  width: 90%;
   height: auto;
-  border: 3px solid #1abc9c;
-  border-radius: 10px;
+  border: 3px solid black;
+  border-radius: 30px;
   overflow: hidden;
   margin-top: 22px;
   box-shadow: 0 4px 16px rgba(0,0,0,0.18);
@@ -62,7 +62,7 @@ canvas{ margin-top:20px; width:100% !important; height:400px !important; }
 
 /* Ramani yenyewe */
 #map {
-  width: 50%;
+  width: 100%;
   height: 480px;
 }
 
@@ -72,8 +72,8 @@ canvas{ margin-top:20px; width:100% !important; height:400px !important; }
   top: 50%; 
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 70px;
-  height: 70px;
+  width: 40px;
+  height: 40px;
   border: 8px solid #ddd;
   border-top: 8px solid #27ae60;
   border-radius: 50%;
